@@ -5,11 +5,11 @@ project (Hardt)
 
 # Set the framework major and minor version here
 set (Hardt_VERSION_MAJOR 1)
-set (Hardt_VERSION_MINOR 1)
+set (Hardt_VERSION_MINOR 2)
 
 # When setting the debian package version, do not forget to add a changelog
 # entry in hardt/debian/changelog
-set (Hardt_VERSION_DEB_PACKAGE 4)
+set (Hardt_VERSION_DEB_PACKAGE 0)
 
 # Define the version string
 set (Hardt_VERSION Hardt_VERSION_MAJOR + "." + HARDT_VERSION_MINOR + "." + HARDT_VERSION_DEP_PACKAGE)
