@@ -2,8 +2,10 @@ hardt (1.2-0) RELEASED; urgency=medium
 
   [ Henrik Witt-Hansen ]
   * Multipliers now have unity gain (1, no matter which lo amplitude is used)
+  * HMux now have a duplex mode where a single channel is duplicated, turning
+    a monostream into a pseudo-stereo stream
 
- -- Mackie <henrik@hardttoolkit.org>  xxx, xx xxx 202x xx:xx:00 +0100
+ -- Mackie <henrik@hardttoolkit.org>  Sun, 21 Feb 2021 17:20:00 +0100
 
 hardt (1.1-4) RELEASED; urgency=medium
 
